# yt-downloader

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  worker.py
backend/app/: main.py
backend/app/api/: auth.py  deps.py  downloads.py
backend/app/core/: config.py  queue.py  rate_limit.py  redis_client.py  security.py  users.py
backend/app/schemas/: jobs.py
backend/app/services/: cleanup.py  cookies.py  jobs.py  metadata.py
backend/app/workers/: runner.py
backend/tests/: test_auth.py  test_cookies.py  test_filename.py  test_format_selection.py  test_rate_limit_and_jobs.py  test_rq_integration.py
cookie_refresh/: Dockerfile  refresh.py  test_refresh.py
frontend/: Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/queue/: page.tsx
frontend/src/components/: AuthGate.tsx  CookiesModal.tsx  CookiesStatusButton.tsx  DownloadPanel.tsx  JobRow.tsx  Topbar.tsx  UrlForm.tsx  VideoPreview.tsx  YouTubePlayer.tsx
frontend/src/lib/: api.ts  utils.ts
nginx/: nginx.conf
scripts/: cleanup-cron.sh  deploy.sh  setup.sh
secrets/: cookies.txt.example
